--- a/ejercicio_final/take_away.css
+++ b/ejercicio_final/take_away.css
@@ -1,63 +1,89 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: rgb(239, 232, 174);
+body{
+  background-color: antiquewhite;
   margin: 0;
-  padding: 0;
 }
-
-a {
-  background-image: url('comida.jpg');
-  text-align: center;
-  background-color: rgb(180, 148, 107);
+header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(comida.jpg);
+  background-size: 35rem;
+  height: 20vh;
+  padding: 1rem;
+  border-bottom: 20px solid brown;
+}
+#header-div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  background-color: rgba(255, 0, 0, 0.329);
+}
+header > a{
+  text-decoration: none;
+}
+#header-div h1{
   color: white;
-  height: 70px;
-  margin-bottom: 0;
-  margin-top: 0;
+  padding: 15px;
+  margin: none;
 }
-
-.promociones {
+#header-div h2{
+  color: white;
+  padding: 15px;
+  margin: none;
+}
+#title_section {
+  font-size: 200%;
+  text-align: center;
+  color: brown;
+}
+.promociones{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  background-color: antiquewhite;
-  padding: 1rem;
+  margin: 3rem;
+  padding: 2rem;
+  background-color: white;
+  border-radius: 10px;
 }
-
-#title_section {
-  color: darkred;
-  width: 100%;
-  text-align: center;
-}
-
-.promocion {
-  box-shadow: 0 0 10px grey;
-  padding: 1rem;
-  border-radius: 5px;
-  background-color: rgba(227, 166, 74, 0.993);
-  width: 400px;
-  height: 200px;
+.promocion{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: burlywood;
   margin: 10px;
-  color: black;
+  padding: 2rem;
 }
-
-.promocion p {
-  color: black;
+.promocion img{
+  width: 220px;
+  height: 220px;
+  border-radius: 10px;
 }
-
-.promocion img {
-  max-width: 100%;
-  height: 100%;
+.promocion h1{
+  font-weight: 900;
 }
-
-.promocion img:hover {
+.promocion > img:hover{
   transform: scale(1.1);
-  transition: transform 0.3s;
-  border-radius: 5px;
-  box-shadow: 0 0 10px grey;
+  cursor: pointer;
+  box-shadow: 0 0 10px black;
+  transition: 0.2s;
 }
-
-footer {
+footer{
+  background-color: brown;
   text-align: center;
-  background-color: rgb(175, 142, 106);
   color: white;
-  padding: 0;
+  padding: 1rem;
+}
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .promociones{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 767px) {
+  .promociones{
+      display: grid;
+      grid-template-columns: 1fr;
+  }
 }
